--- a/src/components/HeroSlider.css
+++ b/src/components/HeroSlider.css
@@ -21,6 +21,16 @@
   opacity: 1;
 }
 
+.slide-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  z-index: -1;
+}
+
 .slide-overlay {
   position: absolute;
   top: 0;
